[project]
name = "topogen"
version = "0.2.0+dev"
description = "Generate test topology files and configurations for CML2"
readme = "README.md"
authors = [{ name = "Ralph Schmieder", email = "rschmied@cisco.com" }]
requires-python = ">=3.12"
dependencies = [
  "enlighten==1.13.0",
  "httpx>=0.27.0,<0.28.0",
  "jinja2==3.1.4",
  "networkx==3.4.2",
  "pyserde[toml]>=0.22.2",
  "virl2-client==2.8.0",
]

[project.scripts]
topogen = "topogen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
